Refactoring & update few files
Update base.html, home.html, projects.html, etc.

--- a/templates/main/404.html
+++ b/templates/main/404.html
@@ -6,21 +6,21 @@
 
 {% block body %}
 <style>
-        .error {
-            position: absolute;
-            top: 41%;
-            left: 50%;
-            margin-right: -50%;
-            transform: translate(-50%, -50%);
+    p {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
 
-            font-family: 'Lexend Peta', sans-serif;
-            font-size: 3em;
-            color: #000000;
-        }
-
-
+        font-family: 'Lexend Peta', sans-serif;
+        font-size: 3em;
+        color: black;
+    }
+    
 </style>
-<div>
-    <div class="error">Something went wrong, 404...</div>
-</div>
+
+<main>
+    <p>Something went wrong, 404...</p>
+</main>
 {% endblock %}
