--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -6,22 +6,22 @@ Home
 
 {% block body %}
 <style>
-        .home {
-            position: absolute;
-            top: 41%;
-            left: 50%;
-            margin-right: -50%;
-            transform: translate(-50%, -50%);
+    p {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
 
-            font-family: 'Lexend Peta', sans-serif;
-            font-size: 3em;
-            color: #000000;
-        }
-
+        font-family: 'Lexend Peta', sans-serif;
+        font-size: 3em;
+        color: black;
+    }
 
 </style>
-<div>
-    <div class="home">Welcome to my site!</div>
-</div>
+
+<main>
+    <p>Welcome to my site!</p>
+</main>
 {% endblock %}
 
