--- a/templates/main/links.html
+++ b/templates/main/links.html
@@ -6,6 +6,18 @@ Links
 
 {% block body %}
 <style>
+    main {
+        padding-left: 10%;
+        padding-right: 10%;
+        padding-top: 1%;
+        padding-bottom: 1%;
+    }
+
+    p {
+        font-size: 1.5em;
+        color: #111;
+    }
+
     a {
         color: black;
         text-decoration: none;
@@ -16,22 +28,18 @@ Links
         text-decoration: none;
     }
 
-    section {
-        padding-left: 2%;
-        padding-top: 1%;
-    }
-
 </style>
-<section>
+
+<main>
     <h2>
         <b>
             <a href="https://github.com/merive">My GitHub</a>
         </b>
     </h2>
     <p>
-        In my github, I work on my designs.
-        <br>I make changes every day and try not to abandon my projects.
-        <br>You can learn more about my projects on the <b><a href="/projects">My Projects page</a></b>.
+        In my GitHub, I work on my designs.
+        I make changes every day and try not to abandon my projects.
+        You can learn more about my projects on the <b><a href="/projects">My Projects page</a></b>.
     </p>
     <h2>
         <b>
@@ -40,14 +48,18 @@ Links
     </h2>
     <p>
         This is my mini blog.
-        <br>In it, I tell what is happening in my life and what I do.
-        <br>I often tweet.
+        In it, I tell what is happening in my life and what I do.
+        I often tweet.
     </p>
-    <h2><b><a href="https://www.reddit.com/user/merive_">My Reddit</a></b></h2>
+    <h2>
+        <b>
+            <a href="https://www.reddit.com/user/merive_">My Reddit</a>
+        </b>
+    </h2>
     <p>
         This is my another blog.
-        <br>In it, I talk about projects that I am currently working on or have already done.
-        <br>So far, I rarely do posts.
+        In it, I talk about projects that I am currently working on or have already done.
+        So far, I rarely do posts.
     </p>
-</section>
+</main>
 {% endblock %}
