--- a/templates/main/projects.html
+++ b/templates/main/projects.html
@@ -6,6 +6,18 @@ Projects
 
 {% block body %}
 <style>
+    main {
+        padding-left: 10%;
+        padding-right: 10%;
+        padding-top: 1%;
+        padding-bottom: 1%;
+    }
+
+    p {
+        font-size: 1.5em;
+        color: #111;
+    }
+
     a {
         color: black;
         text-decoration: none;
@@ -16,13 +28,9 @@ Projects
         text-decoration: none;
     }
 
-    section {
-        padding-left: 2%;
-        padding-top: 1%;
-    }
-
 </style>
-<section>
+
+<main>
     <h2>
         <b>
             <a href="https://github.com/merive/AssistBOT">AssistBOT</a>
@@ -30,9 +38,9 @@ Projects
     </h2>
     <p>
         This is my first major project.
-        <br>This is a bot for discord chats.
-        <br>It has many functions.
-        <br>I have been working on it for a long time and am proud of this project.
+        This is a bot for discord chats.
+        It has many functions.
+        I have been working on it for a long time and am proud of this project.
     </p>
 
     <h2>
@@ -42,8 +50,8 @@ Projects
     </h2>
     <p>
         My major project in Java.
-        <br>In it, I collect my own set of utilities for different occasions.
-        <br>I try to develop it as a cool idea.
+        In it, I collect my own set of utilities for different occasions.
+        I try to develop it as a cool idea.
     </p>
 
     <h2>
@@ -53,9 +61,9 @@ Projects
     </h2>
     <p>
         This is the project you are on.
-        <br>He is developing right now and will be developing with me.
-        <br>This is my personal site.
-        <br>On it you can get to know me better.
+        He is developing right now and will be developing with me.
+        This is my personal site.
+        On it you can get to know me better.
     </p>
 
     <h2>
@@ -65,8 +73,8 @@ Projects
     </h2>
     <p>
         Android Clicker-Game.
-        <br>A simple game in which the main task is to find out what happens after a million clicks on the red button...
-        <br>My first serious android app.
+        A simple game in which the main task is to find out what happens after a million clicks on the red button...
+        My first serious android app.
     </p>
-</section>
+</main>
 {% endblock %}
