--- a/templates/bases/p1mt_base.html
+++ b/templates/bases/p1mt_base.html
@@ -6,29 +6,45 @@
     <title>
         {% block title %}{% endblock %}
     </title>
-    <link href="https://fonts.googleapis.com/css?family=Changa&display=swap" rel="stylesheet">
+    <!-- Bootstrap -->
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" rel="stylesheet">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Changa&display=swap" rel="stylesheet">      
+    <!-- Set icon -->
     <link href="{{ url_for('static', filename='press1mtimes_icon.png') }}" rel="shortcut icon">
 </head>
 <body>
 <style>
     body {
         background: #2C2C2C;
+        
         font-family: 'Changa', sans-serif;
+        font-size: 16px;
     }
 
-    ::-webkit-scrollbar {
-        width: 0;
+    body::-webkit-scrollbar {
+        width: 0.25rem;
     }
 
-     ul {
+    body::-webkit-scrollbar-track {
+        background: #333;
+    }
+
+    body::-webkit-scrollbar-thumb {
+        background: #C82A1E;
+    }
+
+    body::-webkit-scrollbar-hover {
+        background: #C82A1E;
+    }
+
+    ul {
         list-style-type: none;
         margin: 0;
         padding: 0;
         overflow: hidden;
         background-color: #333;
-        position: -webkit-sticky; 
         position: sticky;
         top: 0;
     }
@@ -46,16 +62,20 @@
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
-    } 
+
+        filter: grayscale(100%);
+    }
 
     li a:hover {
         background-color: #2C2C2C;
         color: #C82A1E;
         text-decoration: none;
+
+        filter: grayscale(0%);
     }
 
-
 </style>
+
 <ul>
     <li><a href="/press1mtimes">Press1MTimes</a></li>
     <li><a href="https://github.com/merive/Press1MTimes">GitHub</a></li>
