--- a/templates/press1mtimes/update.html
+++ b/templates/press1mtimes/update.html
@@ -1,29 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
-    <title>
-        Update APK file
-    </title>
-    <link href="https://fonts.googleapis.com/css?family=Changa&display=swap" rel="stylesheet">
-    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" rel="stylesheet">
-    <link href="{{ url_for('static', filename='press1mtimes_icon.png') }}" rel="shortcut icon">
-</head>
-<body>
-<style>
-    body {
-        background: #2C2C2C;
-        font-family: 'Changa', sans-serif;
-    }
+{% extends 'bases/p1mt_base.html' %}
 
-    ::-webkit-scrollbar {
-        width: 0;
+{% block title %}
+Update APK file
+{% endblock %}
+
+{% block body %}
+<html>
+<style>
+    p {
+        margin-left: 10px;
     }
 
     .elm {
-        padding-left: 2%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+
         color: #C82A1E;
     }
 
@@ -31,8 +25,11 @@
         color: #2C2C2C;
         background-color: #C82A1E;
         border: 5px solid #000;
-        padding: 8px;
 	  	border-radius: 8px;
+        padding: 4px;
+        padding-bottom: 8px;
+
+        margin: 10px;
     }
 
     b {
@@ -41,16 +38,14 @@
 
 
 </style>
-
 <div class="elm">
-    <b>ONLY FOR DEV</b>
     <form action="/load" enctype="multipart/form-data"
           method="POST">
+        <p><b>ONLY FOR DEV</b></p>
         <input class="inp" name="file" type="file"/>
-        <br><br><input class="inp" name="key">
-        <br><br><input class="inp" type="submit"/>
+        <br><input class="inp" name="key">
+        <br><input class="inp" type="submit"/>
     </form>
 </div>
-
-</body>
 </html>
+{% endblock %}
