--- a/templates/press1mtimes/press1mtimes.html
+++ b/templates/press1mtimes/press1mtimes.html
@@ -46,6 +46,7 @@ Press1MTimes
         left: 50%;
         margin-right: -50%;
         transform: translate(-50%, -50%);
+
         /* Ellipse 2 */
         width: 220px;
         height: 220px;
@@ -57,15 +58,16 @@ Press1MTimes
     }
 
     .text {
-        /* Text parameters */
+        /* Set position */
         position: absolute;
         top: 50%;
         left: 50%;
         margin-right: -50%;
         transform: translate(-50%, -50%);
 
-        width: 256px;
-        height: 256px;
+        text-align: center;
+        vertical-align:middle;
+        padding-top: 50%;
 
         /* Text, font, size parameters */
         color: #AF251B;
@@ -74,9 +76,8 @@ Press1MTimes
         text-decoration: none;
         -webkit-text-stroke: 2px #2C2C2C;
 
-        text-align: center;
-        vertical-align:middle;
-        padding-top: 50%
+        width: 256px;
+        height: 256px; 
     }
 
     .text:hover {
