Update Upload system Update APK file Update bases files Update press_icon And much more...

--- a/templates/bases/base.html
+++ b/templates/bases/base.html
@@ -57,7 +57,7 @@
     li a {
         display: block;
         color: #2d6e51;
-        font-size: 20px;
+        font-size: 1.5em;
         font-family: 'Changa', sans-serif;
 
         text-align: center;
@@ -74,6 +74,7 @@
 
         filter: grayscale(0%);
     }
+
 
 </style>
 <ul>
