--- a/templates/bases/p1mt_base.html
+++ b/templates/bases/p1mt_base.html
@@ -11,8 +11,10 @@
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" rel="stylesheet">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Changa&display=swap" rel="stylesheet">
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <!-- Set icon -->
-    <link href="{{ url_for('static', filename='press1mtimes_icon.png') }}" rel="shortcut icon">
+    <link href="{{ url_for('static', filename='press_icon.png') }}" rel="shortcut icon">
 </head>
 <body>
 <style>
@@ -59,7 +61,7 @@
         padding: 14px 16px;
 
         color: #C82A1E;
-        font-size: 20px;
+        font-size: 1.5em;
         font-family: 'Changa', sans-serif;
         text-decoration: none;
 
