--- a/templates/press1mtimes/home.html
+++ b/templates/press1mtimes/home.html
@@ -28,8 +28,8 @@ Press1MTimes
 
     .ecl1 {     
         /* Ellipse 1 */
-        width: 256px;
-        height: 256px;
+        width: 14em;
+        height: 14em;
         border-radius: 50%;
 
         background: #AF251B;
@@ -48,8 +48,8 @@ Press1MTimes
         transform: translate(-50%, -50%);
 
         /* Ellipse 2 */
-        width: 220px;
-        height: 220px;
+        width: 12em;
+        height: 12em;
         border-radius: 50%;
 
         background: #C82A1E;
@@ -62,22 +62,14 @@ Press1MTimes
         position: absolute;
         top: 50%;
         left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%);
-
-        text-align: center;
-        vertical-align:middle;
-        padding-top: 50%;
+        transform: translateX(-50%) translateY(-50%);
 
         /* Text, font, size parameters */
         color: #AF251B;
-        font-family: Arial;
-        font-size: 2em;
+        font-family: 'Poppins', sans-serif;
+        font-size: 1.7em;
         text-decoration: none;
         -webkit-text-stroke: 2px #2C2C2C;
-
-        width: 256px;
-        height: 256px; 
     }
 
     .text:hover {
