--- a/templates/main/projects.html
+++ b/templates/main/projects.html
@@ -7,6 +7,9 @@ Projects
 {% block body %}
 <style>
     main {
+        display: flex;
+        flex-direction: column;
+
         padding-left: 10%;
         padding-right: 10%;
         padding-top: 1%;
