--- a/templates/main/404.html
+++ b/templates/main/404.html
@@ -6,15 +6,20 @@
 
 {% block body %}
 <style>
-    p {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%);
+    main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
+        padding-left: 10%;
+        padding-right: 10%;
+        padding-top: 10%;
+    }
+
+    p {
         font-family: 'Lexend Peta', sans-serif;
-        font-size: 3em;
+        font-size: 2em;
         color: black;
     }
     
