--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -7,10 +7,14 @@ About
 {% block body %}
 <style>
     main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
         padding-left: 10%;
         padding-right: 10%;
-        padding-top: 1%;
-        padding-bottom: 1%;
+        padding-top: 10%;
     }
 
     p {
