--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -9,12 +9,11 @@ About
     main {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
 
         padding-left: 10%;
         padding-right: 10%;
-        padding-top: 10%;
+        padding-top: 1%;
+        padding-bottom: 1%;
     }
 
     p {
