--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -18,6 +18,11 @@ Home
     }
 
     p {
+	position: absolute;
+    	top: 50%;
+    	left: 50%;
+    	transform: translateX(-50%) translateY(-50%);
+
         font-family: 'Lexend Peta', sans-serif;
         font-size: 2em;
         color: black;
@@ -27,8 +32,7 @@ Home
 
 <main>
     <p>
-        <b>Hi, I'm merive_, Welcome to my site.</b>
-        <br>On this site you will learn about me,<br>my projects, my links and much more.
+        Welcome to my site. Explore.
     </p>
 </main>
 {% endblock %}
