Update fonts in all files

--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -23,7 +23,7 @@ Home
     	left: 50%;
     	transform: translateX(-50%) translateY(-50%);
 
-        font-family: 'Lexend Peta', sans-serif;
+        font-family: 'Orbitron', sans-serif;
         font-size: 2em;
         color: black;
     }
