--- a/templates/press1mtimes/home.html
+++ b/templates/press1mtimes/home.html
@@ -66,8 +66,8 @@ Press1MTimes
 
         /* Text, font, size parameters */
         color: #AF251B;
-        font-family: 'Poppins', sans-serif;
-        font-size: 1.7em;
+        font-family: 'Do Hyeon', sans-serif;
+        font-size: 2em;
         text-decoration: none;
         -webkit-text-stroke: 2px #2C2C2C;
     }
