--- a/templates/bases/base.html
+++ b/templates/bases/base.html
@@ -10,8 +10,8 @@
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" rel="stylesheet">
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Changa&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&display=swap" rel="stylesheet">
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Orbitron&display=swap" rel="stylesheet">
     <!-- Set icon -->
     <link href="{{ url_for('static', filename='merive_icon.png') }}" rel="shortcut icon">
 </head>
@@ -20,7 +20,7 @@
     body {
         background-image: linear-gradient(to right, #286334, #327a70);
 
-        font-family: 'Changa', sans-serif;
+        font-family: 'Montserrat', sans-serif;
         font-size: 16px;
     }
 
@@ -33,11 +33,11 @@
     }
 
     body::-webkit-scrollbar-thumb {
-        background: #286334;
+        background: linear-gradient(90deg, #286334, #327a70);
     }
 
     body::-webkit-scrollbar-hover {
-        background: #286334;
+        background: linear-gradient(90deg, #286334, #327a70);
     }
 
     ul {
@@ -51,6 +51,7 @@
     }
 
     li {
+        font-family: 'Orbitron', sans-serif;
         float: left;
     }
 
@@ -58,13 +59,12 @@
         display: block;
         color: #2d6e51;
         font-size: 1.25em;
-        font-family: 'Changa', sans-serif;
 
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
 
-        filter: grayscale(90%);
+        filter: grayscale(99%);
     }
 
     li a:hover {
@@ -74,6 +74,10 @@
 
         filter: grayscale(0%);
     }
+
+
+
+
 
 </style>
 <ul>
