--- a/templates/bases/p1mt_base.html
+++ b/templates/bases/p1mt_base.html
@@ -10,9 +10,9 @@
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" rel="stylesheet">
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Changa&display=swap" rel="stylesheet">
     <link href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
     <!-- Set icon -->
     <link href="{{ url_for('static', filename='press_icon.png') }}" rel="shortcut icon">
 </head>
@@ -21,7 +21,7 @@
     body {
         background: #2C2C2C;
         
-        font-family: 'Changa', sans-serif;
+        font-family: 'Poppins', sans-serif;
         font-size: 16px;
     }
 
@@ -62,7 +62,7 @@
 
         color: #C82A1E;
         font-size: 1.25em;
-        font-family: 'Changa', sans-serif;
+        font-family: 'Poppins', sans-serif;
         text-decoration: none;
 
         filter: grayscale(100%);
@@ -75,6 +75,7 @@
 
         filter: grayscale(0%);
     }
+
 
 </style>
 
