--- a/templates/main/404.html
+++ b/templates/main/404.html
@@ -18,7 +18,7 @@
     }
 
     p {
-        font-family: 'Lexend Peta', sans-serif;
+        font-family: 'Orbitron', sans-serif;
         font-size: 2em;
         color: black;
     }
