--- a/templates/main/links.html
+++ b/templates/main/links.html
@@ -22,6 +22,7 @@ Links
     }
 
     a {
+        font-family: 'Orbitron', sans-serif;
         color: black;
         text-decoration: none;
     }
