Add data base and update few files: *.html files, app.py, etc.

--- a/templates/press1mtimes/home.html
+++ b/templates/press1mtimes/home.html
@@ -64,6 +64,13 @@ Press1MTimes
         left: 50%;
         transform: translateX(-50%) translateY(-50%);
 
+        width: 7em;
+        height: 7em;
+
+        text-align: center;
+        vertical-align:middle;
+        padding-top: 50%;
+
         /* Text, font, size parameters */
         color: #AF251B;
         font-family: 'Do Hyeon', sans-serif;
@@ -87,6 +94,7 @@ Press1MTimes
         font-size: 1.5em;
         color: #C82A1E;
     }
+
 
 </style>
 <main>
