--- a/templates/main/404.html
+++ b/templates/main/404.html
@@ -18,6 +18,11 @@
     }
 
     p {
+	position: absolute;
+    	top: 50%;
+    	left: 50%;
+    	transform: translateX(-50%) translateY(-50%);
+
         font-family: 'Orbitron', sans-serif;
         font-size: 2em;
         color: black;
