--- a/templates/bases/p1mt_base.html
+++ b/templates/bases/p1mt_base.html
@@ -7,8 +7,8 @@
         {% block title %}{% endblock %}
     </title>
     <!-- Bootstrap -->
-    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" rel="stylesheet">
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" rel="stylesheet">
     <!-- Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
@@ -17,6 +17,14 @@
     <link href="{{ url_for('static', filename='press_icon.png') }}" rel="shortcut icon">
 </head>
 <body>
+<!-- Bootstrap -->
+<script crossorigin="anonymous"
+        integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
+        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+<script crossorigin="anonymous"
+        integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"></script>
+
 <style>
     body {
         background: #2C2C2C;
@@ -41,49 +49,24 @@
         background: #C82A1E;
     }
 
-    ul {
-        list-style-type: none;
-        padding: 0;
-        overflow: hidden;
-        position: sticky;
-        top: 0;
-
-        background-color: #333;
-    }
-
-    li {
-        float: left;
-    }
-
-    li a {
-        display: block;
-        text-align: center;
-        padding: 14px 16px;
-
-        color: #C82A1E;
-        font-size: 1.25em;
-        font-family: 'Poppins', sans-serif;
-        text-decoration: none;
-
-        filter: grayscale(100%);
-    }
-
-    li a:hover {
-        background-color: #2C2C2C;
-        color: #C82A1E;
-        text-decoration: none;
-
-        filter: grayscale(0%);
-    }
-
-
 </style>
 
-<ul>
-    <li><a href="/press1mtimes">Press1MTimes</a></li>
-    <li><a href="https://github.com/merive/Press1MTimes">GitHub</a></li>
-    <li><a href="/">Back</a></li>
-</ul>
+<nav class="navbar navbar-dark" style="background-color: #333;">
+    <div class="container-fluid">
+        <a class="navbar-brand text-danger" href="/press1mtimes">Press1MTimes</a>
+        <button aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
+                class="navbar-toggler text-danger" data-bs-target="#navbarNavAltMarkup" data-bs-toggle="collapse"
+                type="button">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link text-danger" href="https://github.com/merive/Press1MTimes">GitHub</a>
+                <a class="nav-link text-danger" href="/home">Back</a>
+            </div>
+        </div>
+    </div>
+</nav>
 {% block body %}{% endblock %}
 </body>
 </html>
