--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -12,8 +12,14 @@ About
 
         padding-left: 10%;
         padding-right: 10%;
-        padding-top: 1%;
+        padding-top: 2%;
         padding-bottom: 1%;
+    }
+
+    a {
+        font-family: 'Orbitron', sans-serif;
+        color: black;
+        text-decoration: none;
     }
 
     p {
