--- a/templates/main/error.html
+++ b/templates/main/error.html
@@ -1,7 +1,7 @@
 {% extends 'bases/base.html' %}
 
 {% block title %}
-404
+{{ error_code }}
 {% endblock %}
 
 {% block body %}
@@ -18,7 +18,7 @@
     }
 
     p {
-	position: absolute;
+	    position: absolute;
     	top: 50%;
     	left: 50%;
     	transform: translateX(-50%) translateY(-50%);
@@ -27,10 +27,16 @@
         font-size: 2em;
         color: black;
     }
+
+    a {
+        font-family: 'Orbitron', sans-serif;
+        color: black;
+        text-decoration: none;
+    }
     
 </style>
 
 <main>
-    <p>Something went wrong, 404...</p>
+    <p>{{ error_text }}</p>
 </main>
 {% endblock %}
