--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -18,7 +18,7 @@ Home
     }
 
     p {
-	position: absolute;
+	    position: absolute;
     	top: 50%;
     	left: 50%;
     	transform: translateX(-50%) translateY(-50%);
@@ -26,6 +26,12 @@ Home
         font-family: 'Orbitron', sans-serif;
         font-size: 2em;
         color: black;
+    }
+
+    a {
+        font-family: 'Orbitron', sans-serif;
+        color: black;
+        text-decoration: none;
     }
 
 </style>
