Fix bug with navbar Replace local db to remote Update few *.html files Update error system

--- a/templates/bases/p1mt_base.html
+++ b/templates/bases/p1mt_base.html
@@ -31,6 +31,8 @@
         
         font-family: 'Poppins', sans-serif;
         font-size: 16px;
+
+        padding-top: 70px;
     }
 
     body::-webkit-scrollbar {
@@ -51,7 +53,7 @@
 
 </style>
 
-<nav class="navbar navbar-dark" style="background-color: #333;">
+<nav class="navbar fixed-top navbar-dark" style="background-color: #333;">
     <div class="container-fluid">
         <a class="navbar-brand text-danger" href="/press1mtimes">Press1MTimes</a>
         <button aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
