--- a/templates/bases/base.html
+++ b/templates/bases/base.html
@@ -30,6 +30,8 @@
 
         font-family: 'Montserrat', sans-serif;
         font-size: 16px;
+
+        padding-top: 70px;
     }
 
     body::-webkit-scrollbar {
@@ -48,8 +50,14 @@
         background: linear-gradient(90deg, #286334, #327a70);
     }
 
+    a {
+        font-family: 'Orbitron', sans-serif;
+        color: black;
+        text-decoration: none;
+    }
+
 </style>
-<nav class="navbar navbar-dark" style="background-color: #333;">
+<nav class="navbar fixed-top navbar-dark" style="background-color: #333;">
     <div class="container-fluid">
         <a class="navbar-brand text-success" href="/home">merive_</a>
         <button aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
