Update file update system & update page Update home.html & p1mt_base.html for Press1MTimes Update base.html, projects.html and app.py

--- a/templates/bases/base.html
+++ b/templates/bases/base.html
@@ -59,7 +59,7 @@
 </style>
 <nav class="navbar fixed-top navbar-dark" style="background-color: #333;">
     <div class="container-fluid">
-        <a class="navbar-brand text-success" href="/home">merive_</a>
+        <a class="navbar-brand text-success" href="/">merive_</a>
         <button aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler text-success" data-bs-target="#navbarNavAltMarkup" data-bs-toggle="collapse"
                 type="button">
