--- a/templates/bases/p1mt_base.html
+++ b/templates/bases/p1mt_base.html
@@ -64,7 +64,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link text-danger" href="https://github.com/merive/Press1MTimes">GitHub</a>
-                <a class="nav-link text-danger" href="/home">Back</a>
+                <a class="nav-link text-danger" href="/">Back</a>
             </div>
         </div>
     </div>
