--- a/templates/press1mtimes/home.html
+++ b/templates/press1mtimes/home.html
@@ -104,7 +104,7 @@ Press1MTimes
         <div class="btn">
             <div class="ecl1">
                 <div class="ecl2">
-                    <a class="text" href="/download">DOWNLOAD</a>
+                    <a class="text" href="/press1mtimes/download">DOWNLOAD</a>
                 </div>
             </div>
         </div>
