--- a/templates/bases/base.html
+++ b/templates/bases/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--suppress ALL -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,7 +14,7 @@
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Orbitron&display=swap" rel="stylesheet">
     <!-- Set icon -->
-    <link href="{{ url_for('static', filename='favicon.ico') }}" rel="shortcut icon">
+    <link href="{{ url_for('static', filename='merive.ico') }}" rel="shortcut icon">
 </head>
 <body>
 <!-- Bootstrap -->
