--- a/templates/main/projects.html
+++ b/templates/main/projects.html
@@ -49,7 +49,7 @@ Projects
 
     <h2>
         <b>
-            <a href="https://github.com/merive/MTools">MTools</a>
+            <a href="/mtools">MTools</a>
         </b>
     </h2>
     <p>
