Update file update system
Add download for MTools

--- a/templates/main/update.html
+++ b/templates/main/update.html
@@ -49,6 +49,7 @@ Update file
         <br><input class="inp" name="key" placeholder="Write key" style="">
         <br><input class="inp" name="v_code" placeholder="Write version code">
         <br><input class="inp" name="project" placeholder="Write project name">
+        <br><input class="inp" name="platform" placeholder="Write platform">
         <br><input class="inp" type="submit"/>
         <br>
         <p style="font-size: 1em; ">{{ result }}</p>
