--- a/templates/mtools/home.html
+++ b/templates/mtools/home.html
@@ -9,7 +9,7 @@ MTools
 <style>
     .title {
         position: absolute;
-        top: 30%;
+        top: 25%;
         left: 50%;
         margin-right: -50%;
         transform: translate(-50%, -50%);
@@ -63,9 +63,9 @@ MTools
     <div>
         <p class="title">MTools</p>
         <div class="btns">
-            <button class="btn">Download for Windows</button>
-            <br><button class="btn">Download for Linux</button>
-            <br><button class="btn">Download for MacOS</button>
+            <a href="/mtools/download/Windows" class="btn">Download for Windows</a>
+            <br><a href="/mtools/download/Linux" class="btn">Download for Linux</a>
+            <br><a href="/mtools/download/MacOS" class="btn">Download for MacOS</a>
         </div>
         <p class="version">Actual version: <i>{{ version }}</i></p>
     </div>
