Fix padding bugs

--- a/templates/mtools/home.html
+++ b/templates/mtools/home.html
@@ -8,24 +8,19 @@ MTools
 <html>
 <style>
     .title {
-        position: absolute;
-        top: 25%;
-        left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%);
+        width: 100%;
+        text-align: center;
+        vertical-align:middle;
+        padding-top: 5%;
 
         font-size: 4em;
         color: #BBE1FA;
-
-        padding: 10% 0% 10% 0%;
         }
 
     .btns {
-        position: absolute;
-        top: 60%;
-        left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%);
+        text-align: center;
+        vertical-align:middle;
+        width: 100%;
     }
 
     .btn {
@@ -57,13 +52,17 @@ MTools
 
         font-size: 1.5em;
         color: #BBE1FA;
+        
+        width: 100%;
+        text-align: center;
+        vertical-align:middle;
     }
 </style>
 <main>
     <div>
         <p class="title">MTools</p>
         <div class="btns">
-            <a href="/mtools/download/Windows" class="btn">Download for Windows</a>
+            <br><br><a href="/mtools/download/Windows" class="btn">Download for Windows</a>
             <br><a href="/mtools/download/Linux" class="btn">Download for Linux</a>
             <br><a href="/mtools/download/MacOS" class="btn">Download for MacOS</a>
         </div>
