--- a/templates/press1mtimes/home.html
+++ b/templates/press1mtimes/home.html
@@ -8,16 +8,13 @@ Press1MTimes
 <html>
 <style>
     .title {
-        position: absolute;
-        top: 30%;
-        left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%);
-
         font-size: 4em;
         color: #C82A1E;
 
-        padding: 10% 0% 10% 0%;
+        width: 100%;
+        text-align: center;
+        vertical-align:middle;
+        padding-top: 5%;
     }
 
     .btn {
@@ -93,8 +90,14 @@ Press1MTimes
         margin-right: -50%;
         transform: translate(-50%, -50%);
 
+        width: 100%;
+        text-align: center;
+        vertical-align: middle;
+
         font-size: 1.5em;
         color: #C82A1E;
+
+        margin-top: 10%;
     }
 
 </style>
@@ -102,9 +105,9 @@ Press1MTimes
     <div>
         <p class="title">Press 1M Times</p>
         <div class="btn">
-            <div class="ecl1">
-                <div class="ecl2">
-                    <a class="text" href="/press1mtimes/download">DOWNLOAD</a>
+            <div class="btn ecl1">
+                <div class="btn ecl2">
+                    <a class="btn text" href="/press1mtimes/download">DOWNLOAD</a>
                 </div>
             </div>
         </div>
