Update links page

--- a/templates/main/links.html
+++ b/templates/main/links.html
@@ -12,7 +12,7 @@ Links
 
         padding-left: 10%;
         padding-right: 10%;
-        padding-top: 2%;
+        padding-top: 1%;
         padding-bottom: 1%;
     }
 
@@ -45,6 +45,7 @@ Links
         I make changes every day and try not to abandon my projects.
         You can learn more about my projects on the <a href="/projects">My Projects page</a>.
     </p>
+    
     <h2>
         <b>
             <a href="https://twitter.com/merive_">My Twitter</a>
@@ -55,6 +56,7 @@ Links
         In it, I tell what is happening in my life and what I do.
         I often tweet.
     </p>
+    
     <h2>
         <b>
             <a href="https://www.reddit.com/user/merive_">My Reddit</a>
@@ -64,6 +66,36 @@ Links
         This is my another blog.
         In it, I talk about projects that I am currently working on or have already done.
         So far, I rarely do posts.
+    </p>
+    
+    <h2>
+        <b>
+            <a href="https://stackoverflow.com/users/11937776/merive">My StackOverflow</a>
+        </b>
+    </h2>
+    <p>
+        On my SO, I rarely help many peoples.
+        I'm active user on this comunity.
+    </p>
+
+    <h2>
+        <b>
+            <a href="https://www.codewars.com/users/merive_">My CodeWars</a>
+        </b>
+    </h2>
+    <p>
+        On CodeWars, I like solve interesting tasks.
+        I'm rarely using this site for practice.
+    </p>
+
+    <h2>
+        <b>
+            <a href="mailto:merive.work@gmail.com">My Email</a>
+        </b>
+    </h2>
+    <p>
+        This is my work email.
+        You can write me with tips/offer, will be glad reply.
     </p>
 </main>
 {% endblock %}
