--- a/templates/bases/mtools_base.html
+++ b/templates/bases/mtools_base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--suppress ALL -->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,11 +10,8 @@
     <!-- Bootstrap -->
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" rel="stylesheet">
-    <!-- Fonts -->
-    <link href="https://fonts.gstatic.com" rel="preconnect">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Droid+Sans" />
     <!-- Set icon -->
-    <link href="{{ url_for('static', filename='mtools_icon.ico') }}" rel="shortcut icon">
+    <link href="{{ url_for('static', filename='mtools.ico') }}" rel="shortcut icon">
 </head>
 <body>
 <!-- Bootstrap -->
@@ -29,7 +26,7 @@
     body {
         background-image: linear-gradient(to left, #1A2A33, #0F4B72);
 
-        font-family: "Droid Sans";
+        font-family: "Tahoma";
         font-size: 16px;
 
         padding-top: 70px;
