--- a/templates/bases/p1mt_base.html
+++ b/templates/bases/p1mt_base.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
     <!-- Set icon -->
-    <link href="{{ url_for('static', filename='p1mt_icon.ico') }}" rel="shortcut icon">
+    <link href="{{ url_for('static', filename='p1mt.ico') }}" rel="shortcut icon">
 </head>
 <body>
 <!-- Bootstrap -->
