--- a/templates/main/projects.html
+++ b/templates/main/projects.html
@@ -32,19 +32,19 @@ Projects
         text-decoration: none;
     }
 
+
 </style>
 
 <main>
     <h2>
         <b>
-            <a href="https://github.com/merive/AssistBOT">AssistBOT</a>
+            <a href="https://github.com/merive/Parzibot">Parzibot</a>
         </b>
     </h2>
     <p>
         This is my first major project.
-        This is a bot for discord chats.
-        It has many functions.
-        I have been working on it for a long time and am proud of this project.
+        Before this project name as AssistBOT, but recently I released global update for my bot.
+        This bot have a lot of functions, few events and much more!
     </p>
 
     <h2>
