--- a/templates/bases/mtools.html
+++ b/templates/bases/mtools.html
@@ -7,14 +7,14 @@
     <title>
         {% block title %}{% endblock %}
     </title>
-    <!-- Bootstrap -->
+    <!-- Bootstrap CSS -->
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" rel="stylesheet">
-    <!-- Set icon -->
+    <!-- Set favicon -->
     <link href="{{ url_for('static', filename='mtools.ico') }}" rel="shortcut icon">
 </head>
 <body>
-<!-- Bootstrap -->
+<!-- Bootstrap JS -->
 <script crossorigin="anonymous"
         integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
