--- a/templates/bases/p1mt.html
+++ b/templates/bases/p1mt.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--suppress ALL -->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,15 +10,15 @@
     <!-- Bootstrap -->
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" rel="stylesheet">
-    <!-- Fonts -->
+    <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
-    <!-- Set icon -->
+    <!-- Set favicon -->
     <link href="{{ url_for('static', filename='p1mt.ico') }}" rel="shortcut icon">
 </head>
 <body>
-<!-- Bootstrap -->
+<!-- Bootstrap JS -->
 <script crossorigin="anonymous"
         integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
@@ -58,7 +58,8 @@
     <div class="container-fluid">
         <a class="navbar-brand" style="color: #C82A1E; !important;" href="/press1mtimes">Press1MTimes</a>
         <button aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
-                class="navbar-toggler" style="color: #C82A1E; !important;" data-bs-target="#navbarNavAltMarkup" data-bs-toggle="collapse"
+                class="navbar-toggler" style="color: #C82A1E; !important;" data-bs-target="#navbarNavAltMarkup"
+                data-bs-toggle="collapse"
                 type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
