--- a/templates/bases/main.html
+++ b/templates/bases/main.html
@@ -3,16 +3,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
     <title>
         {% block title %}{% endblock %}
     </title>
+
+    <!--  Bootstrap CSS  -->
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" rel="stylesheet">
+
     <!-- Bootstrap CSS -->
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" rel="stylesheet">
+
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Orbitron&display=swap" rel="stylesheet">
+
     <!-- Set favicon -->
     <link href="{{ url_for('static', filename='merive.ico') }}" rel="shortcut icon">
 </head>
@@ -25,12 +33,30 @@
         integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"></script>
 
+<!--  Navbar code  -->
+<nav class="navbar fixed-top navbar-dark" style="background-color: #333">
+    <div class="container-fluid">
+        <a class="navbar-brand" style="color: #218b5f !important" href="/">merive_</a>
+        <button aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
+                class="navbar-toggler" style="color: #218b5f !important;" data-bs-target="#navbarNavAltMarkup" data-bs-toggle="collapse"
+                type="button">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" style="color: #218b5f !important" href="/projects">My Projects</a>
+                <a class="nav-link" style="color: #218b5f !important" href="/links">My Links</a>
+                <a class="nav-link" style="color: #218b5f !important" href="/about">About</a>
+            </div>
+        </div>
+    </div>
+</nav>
+
 <style>
     body {
         background-image: linear-gradient(to right, #286334, #327a70);
 
         font-family: 'Montserrat', sans-serif;
-        font-size: 16px;
 
         padding-top: 70px;
     }
@@ -53,28 +79,12 @@
 
     a {
         font-family: 'Orbitron', sans-serif;
-        color: black;
+        color: #000;
         text-decoration: none;
     }
 
 </style>
-<nav class="navbar fixed-top navbar-dark" style="background-color: #333;">
-    <div class="container-fluid">
-        <a class="navbar-brand text-success" href="/">merive_</a>
-        <button aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
-                class="navbar-toggler text-success" data-bs-target="#navbarNavAltMarkup" data-bs-toggle="collapse"
-                type="button">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link text-success" href="/projects">My Projects</a>
-                <a class="nav-link text-success" href="/links">My Links</a>
-                <a class="nav-link text-success" href="/about">About</a>
-            </div>
-        </div>
-    </div>
-</nav>
+
 {% block body %}{% endblock %}
 </body>
 </html>
