--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -1,30 +1,51 @@
-{% extends 'bases/base.html' %}
+{% extends 'bases/main.html' %}
 
 {% block title %}
 Home
 {% endblock %}
 
 {% block body %}
+<main>
+    <p>
+        Welcome to <b>merive_'s</b> site.
+        <br>There you can discover about me, my projects and much more.
+        <br>Explore!
+    </p>
+
+    <div class="footer">
+        <b>merive</b>
+    </div>
+</main>
+
 <style>
     main {
         font-family: 'Orbitron', sans-serif;
-        font-size: 2em;
         color: black;
     }
 
     p {
+        font-size: 2em;
+        width: 100%;
+        text-align: center;
+        vertical-align: middle;
+
         position: absolute;
     	top: 50%;
     	left: 50%;
     	transform: translateX(-50%) translateY(-50%);
     }
 
+    .footer {
+        font-size: 1.75em;
+        text-decoration: overline;
+
+        position: fixed;
+        left: 0;
+        bottom: 5%;
+
+        width: 100%;
+        text-align: center;
+        vertical-align: middle;
+    }
 </style>
-
-<main>
-    <p>
-        Welcome to my site. Explore.
-    </p>
-</main>
 {% endblock %}
-
