--- a/templates/bases/main.html
+++ b/templates/bases/main.html
@@ -36,17 +36,18 @@
 <!--  Navbar code  -->
 <nav class="navbar fixed-top navbar-dark" style="background-color: #333">
     <div class="container-fluid">
-        <a class="navbar-brand" style="color: #218b5f !important" href="/">merive_</a>
+        <a class="navbar-brand" href="/" style="color: #218b5f !important">merive_</a>
         <button aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
-                class="navbar-toggler" style="color: #218b5f !important;" data-bs-target="#navbarNavAltMarkup" data-bs-toggle="collapse"
+                class="navbar-toggler" data-bs-target="#navbarNavAltMarkup" data-bs-toggle="collapse"
+                style="color: #218b5f !important;"
                 type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" style="color: #218b5f !important" href="/projects">My Projects</a>
-                <a class="nav-link" style="color: #218b5f !important" href="/links">My Links</a>
-                <a class="nav-link" style="color: #218b5f !important" href="/about">About</a>
+                <a class="nav-link" href="/projects" style="color: #218b5f !important">Projects</a>
+                <a class="nav-link" href="/links" style="color: #218b5f !important">Links</a>
+                <a class="nav-link" href="/about" style="color: #218b5f !important">About</a>
             </div>
         </div>
     </div>
@@ -82,6 +83,8 @@
         color: #000;
         text-decoration: none;
     }
+
+
 
 </style>
 
