--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -11,10 +11,6 @@ Home
         <br>There you can discover about me, my projects and much more.
         <br>Explore!
     </p>
-
-    <div class="footer">
-        <b>merive</b>
-    </div>
 </main>
 
 <style>
@@ -25,27 +21,20 @@ Home
 
     p {
         font-size: 2em;
-        width: 100%;
+        width: 90%;
         text-align: center;
         vertical-align: middle;
+
+        border: black solid 5px;
+        border-radius: 5px;
+        background: #333;
+
+        color: #218b5f;
 
         position: absolute;
     	top: 50%;
     	left: 50%;
     	transform: translateX(-50%) translateY(-50%);
-    }
-
-    .footer {
-        font-size: 1.75em;
-        text-decoration: overline;
-
-        position: fixed;
-        left: 0;
-        bottom: 5%;
-
-        width: 100%;
-        text-align: center;
-        vertical-align: middle;
     }
 </style>
 {% endblock %}
