--- a/templates/main/projects.html
+++ b/templates/main/projects.html
@@ -7,54 +7,56 @@ Projects
 {% block body %}
 
 <main>
-    <div class="content">
-        <h2>
-            <b>
-                <a href="https://github.com/merive/Parzibot">Parzibot</a>
-            </b>
-        </h2>
-        <p>
-            My own Discord Bot.
-            He has a lot of functions, events, error handlers and much more!
-            Recently, I made global update, where I added much cool features.
-            He got even better.
-        </p>
+    <div class="background">
+        <div class="content">
+            <h2>
+                <b>
+                    <a href="https://github.com/merive/Parzibot">Parzibot</a>
+                </b>
+            </h2>
+            <p>
+                My own Discord Bot.
+                He has a lot of functions, events, error handlers and much more!
+                Recently, I made global update, where I added much cool features.
+                He got even better.
+            </p>
 
-        <h2>
-            <b>
-                <a href="/mtools">MTools</a>
-            </b>
-        </h2>
-        <p>
-            Project of various utilities.
-            Unpretentious standard programs with an interesting design.
-            The project recently received an cool major update.
-            Utilities have been updated, a launcher has appeared and much more.
-        </p>
+            <h2>
+                <b>
+                    <a href="/mtools">MTools</a>
+                </b>
+            </h2>
+            <p>
+                Project of various utilities.
+                Unpretentious standard programs with an interesting design.
+                The project recently received an cool major update.
+                Utilities have been updated, a launcher has appeared and much more.
+            </p>
 
-        <h2>
-            <b>
-                <a href="https://github.com/merive/merive.com">merive.com</a>
-            </b>
-        </h2>
-        <p>
-            This is the project you are on.
-            He is developing right now and will be developing with me.
-            This is my personal site.
-            On it you can get to know me better.
-        </p>
+            <h2>
+                <b>
+                    <a href="https://github.com/merive/merive.com">merive.com</a>
+                </b>
+            </h2>
+            <p>
+                This is the project you are on.
+                He is developing right now and will be developing with me.
+                This is my personal site.
+                On it you can get to know me better.
+            </p>
 
-        <h2>
-            <b>
-                <a href="/press1mtimes">Press1MTimes (P1MT)</a>
-            </b>
-        </h2>
-        <p>
-            A cool Android clicker with a cool update coming soon.
-            A simple game in which the main task is to find out what happens after a million clicks on the red
-            button...
-            Cool project with cool design and idea.
-        </p>
+            <h2>
+                <b>
+                    <a href="/press1mtimes">Press1MTimes (P1MT)</a>
+                </b>
+            </h2>
+            <p>
+                A cool Android clicker with a cool update coming soon.
+                A simple game in which the main task is to find out what happens after a million clicks on the red
+                button...
+                Cool project with cool design and idea.
+            </p>
+        </div>
     </div>
 </main>
 
@@ -65,17 +67,20 @@ Projects
 
         padding-left: 7%;
         padding-right: 7%;
-        padding-top: 2%;
-        padding-bottom: 2%;
+        padding-top: 3%;
+        padding-bottom: 3%;
     }
 
-    .content {
+    .background {
         border: black solid 5px;
-        border-radius: 5px;
+        border-radius: 10px;
         background: #333;
+   }
 
+   .content {
         color: #218b5f;
-    }
+        margin: 0.5em 0.5em 0.5em 0.5em;
+   }
 
     p {
         font-size: 1.5em;
@@ -89,9 +94,13 @@ Projects
     }
 
     a:hover {
-        color: #111;
+        color: #218b5f;
         text-decoration: none;
     }
 
+    a:active {
+        color: #000;
+        text-decoration: none;
+    }
 </style>
 {% endblock %}
