--- a/templates/main/projects.html
+++ b/templates/main/projects.html
@@ -67,8 +67,7 @@ Projects
 
         padding-left: 7%;
         padding-right: 7%;
-        padding-top: 3%;
-        padding-bottom: 3%;
+        padding-bottom: 0.75em;
     }
 
     .background {
