Add P1MT page and file uploader for him

--- a/templates/main/projects.html
+++ b/templates/main/projects.html
@@ -47,7 +47,7 @@ Projects
 
             <h2>
                 <b>
-                    <a href="/press1mtimes">Press1MTimes (P1MT)</a>
+                    <a href="/P1MT">Press1MTimes (P1MT)</a>
                 </b>
             </h2>
             <p>
@@ -94,11 +94,6 @@ Projects
 
     a:hover {
         color: #218b5f;
-        text-decoration: none;
-    }
-
-    a:active {
-        color: #000;
         text-decoration: none;
     }
 </style>
