--- a/templates/bases/P1MT.html
+++ b/templates/bases/P1MT.html
@@ -8,16 +8,18 @@
     <title>
         {% block title %}{% endblock %}
     </title>
-    <!-- Bootstrap CSS -->
+
+    <!--  Bootstrap CSS  -->
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" rel="stylesheet">
 
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Orbitron&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
 
     <!-- Set favicon -->
-    <link href="{{ url_for('static', filename='merive.ico') }}" rel="shortcut icon">
+    <link href="{{ url_for('static', filename='p1mt.ico') }}" rel="shortcut icon">
 </head>
 <body>
 <!-- Bootstrap JS -->
@@ -31,18 +33,17 @@
 <!--  Navbar code  -->
 <nav class="navbar fixed-top navbar-dark" style="background-color: #333">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/" style="color: #218b5f !important">merive_</a>
+        <a class="navbar-brand" href="/P1MT" style="color: #C82A1E !important">Press1MTimes</a>
         <button aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler" data-bs-target="#navbarNavAltMarkup" data-bs-toggle="collapse"
-                style="color: #218b5f !important;"
+                style="color: #C82A1E !important"
                 type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="/projects" style="color: #218b5f !important">Projects</a>
-                <a class="nav-link" href="/links" style="color: #218b5f !important">Links</a>
-                <a class="nav-link" href="/about" style="color: #218b5f !important">About</a>
+                <a class="nav-link" href="https://github.com/merive/Press1MTimes" style="color: #C82A1E !important">GitHub</a>
+                <a class="nav-link" href="/" style="color: #C82A1E !important">Back</a>
             </div>
         </div>
     </div>
@@ -53,9 +54,10 @@
 </body>
 <style>
     body {
-        background-image: linear-gradient(to right, #286334, #327a70);
+        background: #2C2C2C;
 
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Poppins', sans-serif;
+        font-size: 16px;
 
         padding-top: 70px;
     }
@@ -69,16 +71,11 @@
     }
 
     body::-webkit-scrollbar-thumb {
-        background: linear-gradient(90deg, #286334, #327a70);
+        background: #C82A1E;
     }
 
     body::-webkit-scrollbar-hover {
-        background: linear-gradient(90deg, #286334, #327a70);
-    }
-
-    a {
-        font-family: 'Orbitron', sans-serif;
-        text-decoration: none;
+        background: #C82A1E;
     }
 </style>
 </html>
