Updated MTools page & added update page for him
Updated few file

--- a/templates/main/projects.html
+++ b/templates/main/projects.html
@@ -23,7 +23,7 @@ Projects
 
             <h2>
                 <b>
-                    <a href="/mtools">MTools</a>
+                    <a href="/MTools">MTools</a>
                 </b>
             </h2>
             <p>
