--- a/templates/main/projects.html
+++ b/templates/main/projects.html
@@ -11,7 +11,7 @@ Projects
         <div class="content">
             <h2>
                 <b>
-                    <a href="https://github.com/merive/Parzibot">Parzibot</a>
+                    <a href="/Parzibot">Parzibot</a>
                 </b>
             </h2>
             <p>
