--- a/templates/main/error.html
+++ b/templates/main/error.html
@@ -28,10 +28,8 @@ Error {{ error_code }}
     }
 
     .background {
-        position: absolute;
-    	top: 50%;
-    	left: 50%;
-    	transform: translateX(-50%) translateY(-50%);
+        margin: 15% 0% 15% 0%;
+        margin-left: 5%;
     	width: 90%;
 
         border: black solid 5px;
