Fixed main home/error pages & MTools pages

--- a/templates/main/error.html
+++ b/templates/main/error.html
@@ -28,8 +28,10 @@ Error {{ error_code }}
     }
 
     .background {
-        margin: 15% 0% 15% 0%;
-        margin-left: 5%;
+        position: absolute;
+    	top: 50%;
+    	left: 50%;
+    	transform: translateX(-50%) translateY(-50%);
     	width: 90%;
 
         border: black solid 5px;
