--- a/templates/MTools/home.html
+++ b/templates/MTools/home.html
@@ -8,73 +8,39 @@ MTools
 <main>
     <div class="content">
         <p class="title">MTools</p>
-        <p style="font-size: 2.5em; color: #BBE1FA;">Free open-source utilities for any task</p>
-        <div class="btns">
-            <a class="btn" href="/mtools/download/EXE">Download Execute file</a>
-            <br><a class="btn" href="/mtools/download/JAR">Download JAR file</a>
-        </div>
-        <p class="version">Actual version: <i>{{ version }}</i></p>
+        <p class="text">
+            Free open-source utilities for any task
+            <br>Use all program for any tasks.
+            <br>Note, Calculator, Mail, Time, RRC and much more...
+        </p>
     </div>
 </main>
 
 <style>
-    .title {
-        width: 100%;
-        text-align: center;
-        vertical-align:middle;
-        padding-top: 3%;
-
-        font-size: 4em;
-        color: #BBE1FA;
-    }
-
     .content {
         text-align: center;
         margin-top: 0.5em;
     }
 
-    .btns {
-        position: absolute;
-        top: 67%;
-        left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%);
-    }
-
-    .btn {
-        border: solid 2px #BBE1FA;
-        background: #1A2A33;
-        color: #BBE1FA;
-        font-size: 1em;
-        text-align: center;
-
-        width: 16em;
-        height: 4em;
-
-        padding: 1em;
-        margin: 1em auto;
-    }
-
-    .btn:hover {
-        background: #BBE1FA;
-        color: #1A2A33;
-        border: solid 2px #1A2A33;
-    }
-
-    .version {
-        position: absolute;
-        bottom: 0%;
-        left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%);
-
-        font-size: 1.5em;
-        color: #BBE1FA;
-
+    .title {
         width: 100%;
         text-align: center;
         vertical-align:middle;
+        padding-top: 5%;
+
+        font-size: 4em;
+        color: #BBE1FA;
     }
 
+    .text {
+        width: 100%;
+        font-size: 2em;
+        color: #BBE1FA;
+        margin: 5% 5% 0% 5%;
+
+        border: solid 2px #BBE1FA;
+        background: #1A2A33;
+        width: 90%;
+    }
 </style>
 {% endblock %}
