--- a/templates/bases/MTools.html
+++ b/templates/bases/MTools.html
@@ -37,6 +37,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
+                <a class="nav-link" href="/MTools/download" style="color: #BBE1FA !important">Download</a>
                 <a class="nav-link" href="https://github.com/merive/MTools" style="color: #BBE1FA !important">GitHub</a>
                 <a class="nav-link" href="/" style="color: #BBE1FA !important">Back</a>
             </div>
