--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -32,8 +32,10 @@ Home
     }
 
     .background {
-        margin: 15% 0% 15% 0%;
-        margin-left: 5%;
+        position: absolute;
+    	top: 50%;
+    	left: 50%;
+    	transform: translateX(-50%) translateY(-50%);
     	width: 90%;
 
         border: black solid 5px;
