Fixed Parzibot page

--- a/templates/bases/Parzibot.html
+++ b/templates/bases/Parzibot.html
@@ -30,20 +30,21 @@
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"></script>
 
 <!--  Navbar code  -->
-<nav class="navbar fixed-top navbar-dark" style="background-color: #111">
+<nav class="navbar fixed-top navbar-dark" style="background-image: linear-gradient(45deg, #ac40c0, #1fe983);">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/Parzibot" style="color: #52ac99 !important">Parzibot</a>
+        <a class="navbar-brand" href="/Parzibot" style="color: #000 !important">Parzibot</a>
         <button aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler" data-bs-target="#navbarNavAltMarkup" data-bs-toggle="collapse"
-                style="color: #52ac99 !important"
+                style="color: #000 !important"
                 type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
+                <a class="nav-link" href="https://bit.ly/3t4htsW" style="color: #000 !important">Add Bot on Server</a>
                 <a class="nav-link" href="https://github.com/merive/Parzibot"
-                   style="color: #52ac99 !important">GitHub</a>
-                <a class="nav-link" href="/" style="color: #52ac99 !important">Back</a>
+                   style="color: #000 !important">GitHub</a>
+                <a class="nav-link" href="/" style="color: #000 !important">Back</a>
             </div>
         </div>
     </div>
@@ -77,6 +78,7 @@
     body::-webkit-scrollbar-hover {
         background: #52ac99;
     }
+
 
 </style>
 </html>
