Update scrollbar color

--- a/templates/bases/main.html
+++ b/templates/bases/main.html
@@ -69,11 +69,11 @@
     }
 
     body::-webkit-scrollbar-thumb {
-        background: linear-gradient(90deg, #286334, #327a70);
+        background: #218b5f;
     }
 
     body::-webkit-scrollbar-hover {
-        background: linear-gradient(90deg, #286334, #327a70);
+        background: #218b5f;
     }
 
     a {
