--- a/templates/P1MT/home.html
+++ b/templates/P1MT/home.html
@@ -11,7 +11,7 @@ Press1MTimes
         <div class="btn">
             <div class="btn ecl1">
                 <div class="btn ecl2">
-                    <a class="btn text" href="/press1mtimes/download">DOWNLOAD</a>
+                    <a class="btn text" href="/P1MT/download">DOWNLOAD</a>
                 </div>
             </div>
         </div>
