Updated projects Changed size of SecurePass icon

--- a/templates/main/projects.html
+++ b/templates/main/projects.html
@@ -56,6 +56,18 @@ Projects
                 button...
                 Cool project with cool design and idea.
             </p>
+
+            <h2>
+                <b>
+                    <a href="/SecurePass">SecurePass</a>
+                </b>
+            </h2>
+            <p>
+                SecurePass is free open-source Password Manager.
+                Just remember one key, using much passwords.
+                Project is developing, adding new features.
+                Cool application for your safety.
+            </p>
         </div>
     </div>
 </main>
